테스트 및 오류 수정

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres:password@localhost:5432/sprint_misson?schema=public"
+DATABASE_URL="postgresql://postgres:password@localhost:5432/sprint_mission?schema=public"
 PORT=3000
 JWT_SECRET="t7HVUdpWIjfHXhZGGIkZHxuFyBPXixJr"
 
