--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "type": "module",
   "scripts": {
-    "dev": "nodemon ./src/app.js",
-    "start": "node ./src/app.js"
+    "start": "node dist/app.js",
+    "dev": "nodemon --watch src src/app.ts",
+    "build": "tsc"
   },
   "dependencies": {
     "@prisma/client": "^6.10.1",
@@ -18,9 +18,18 @@
     "superstruct": "^2.0.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^24.1.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.0",
-    "prisma": "^6.10.1"
+    "prisma": "^6.10.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
