--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 node_modules/
-
-# Keep environment variables out of version control
 .env
 
-# dev test files
-test
-uploads
-
 /src/generated/prisma
+
+# dev test files
+test/
+uploads/
+dist/
