--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "start": "node dist/app.js",
-    "dev": "nodemon --watch src src/app.ts",
+    "dev": "nodemon --watch src --exec tsx src/app.ts",
     "build": "tsc"
   },
   "dependencies": {
@@ -29,6 +29,7 @@
     "prettier": "^3.6.0",
     "prisma": "^6.10.1",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   },
   "prisma": {
