--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "start": "node dist/app.js",
-    "dev": "nodemon --watch src --exec tsx src/app.ts",
+    "start": "node dist/server.js",
+    "dev": "nodemon --watch src --exec tsx src/server.ts",
     "build": "tsc"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "express-jwt": "^8.5.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
+    "socket.io": "^4.8.1",
     "superstruct": "^2.0.2"
   },
   "devDependencies": {
