refactor, feat: prettier 설정 및 적용, main.ts 설정 및 소켓 구조 개선

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 node_modules/
-.env
+.env*
+!.env.example
+dist
+
+uploads
+
+coverage
 
 /src/generated/prisma
 
 # dev test files
-test
-uploads
-dist
+http
