--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 DATABASE_URL="postgresql://postgres:password@localhost:5432/sprint_mission?schema=public"
 PORT=3000
+SOCKET_PORT=8080
 JWT_SECRET="t7HVUdpWIjfHXhZGGIkZHxuFyBPXixJr"
 
 #image Server
