--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "scripts": {
-    "start": "node dist/server.js",
-    "dev": "nodemon --watch src --exec tsx src/server.ts",
-    "build": "tsc"
+    "start": "node dist/main.js",
+    "dev": "nodemon --watch src --exec tsx src/main.ts",
+    "build": "tsc",
+    "test": "dotenv -e .env.test -- npx prisma migrate deploy && jest --coverage",
+    "badge": "coverage-badges"
   },
   "dependencies": {
     "@prisma/client": "^6.10.1",
@@ -23,12 +25,19 @@
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.1.0",
+    "@types/supertest": "^6.0.3",
+    "coverage-badges-cli": "^2.2.0",
+    "dotenv-cli": "^10.0.0",
+    "jest": "^30.1.3",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.0",
     "prisma": "^6.10.1",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
