--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
     "start": "node dist/main.js",
     "dev": "nodemon --watch src --exec tsx src/main.ts",
     "build": "tsc",
+    "test": "jest --coverage",
     "test:integration": "dotenv -e .env.test -- npx prisma migrate deploy && jest test/integration --coverage",
     "test:unit": "jest test/unit --coverage",
-    "test": "npm run test:unit && npm run test:integration",
+    "test:all": "npm run test:unit && npm run test:integration",
     "badge": "coverage-badges"
   },
   "dependencies": {
