feat: env aws 설정 및 제출용 스크린샷 추가

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,18 @@ PORT=3000
 SOCKET_PORT=8080
 JWT_SECRET="t7HVUdpWIjfHXhZGGIkZHxuFyBPXixJr"
 
+NODE_ENV=production # production, development, test
+
+# CORS & Cookie
+CORS_ORIGIN=''
+COOKIE_DOMAIN=''
+
+# AWS
+AWS_S3_REGION=''
+AWS_S3_BUCKET=''
+AWS_S3_ACCESS_KEY_ID=''
+AWS_S3_SECRET_KEY_ID=''
+
 #image Server
 CLOUDINARY_CLOUD_NAME="your-cloud-name"
 CLOUDINARY_API_KEY="1234567890"
