feat: 잘못된 nginx 설정 파일 수정 및 pm2 앱 경로 추가

--- a/infra/ec2/nginx.conf
+++ b/infra/ec2/nginx.conf
@@ -1,18 +1,15 @@
-server {
-        listen       80;
-        listen       [::]:80;
-        # server_name your-domain.com www.your-domain.com;
-        server_name  _;
-        root         /usr/share/nginx/html;
+# /etc/nginx/default.d/ 경로에 생성
+location / {
+    proxy_pass http://127.0.0.1:3000;   # Express 서버 주소/포트
+    proxy_http_version 1.1;
 
-        # Load configuration files for the default server block.
-        include /etc/nginx/default.d/*.conf;
+    # 원본 요청 정보 전달(로그/쿠키/리다이렉션 등에 중요)
+    proxy_set_header Host              $host;
+    proxy_set_header X-Real-IP         $remote_addr;
+    proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
 
-        error_page 404 /404.html;
-        location = /404.html {
-        }
-
-        error_page 500 502 503 504 /50x.html;
-        location = /50x.html {
-        }
-    }
+    # [웹소켓 관련 설정] 업그레이드 헤더
+    # proxy_set_header Upgrade $http_upgrade;
+    # proxy_set_header Connection "upgrade";
+}
