feat: Cloudinary에서 S3로 이미지 업로드 방식 변경 및 관련 설정 추가

--- a/.env.example
+++ b/.env.example
@@ -10,12 +10,7 @@ CORS_ORIGIN=''
 COOKIE_DOMAIN=''
 
 # AWS
-AWS_S3_REGION=''
+AWS_S3_REGION='ap-northeast-2'
 AWS_S3_BUCKET=''
 AWS_S3_ACCESS_KEY_ID=''
 AWS_S3_SECRET_KEY_ID=''
-
-#image Server
-CLOUDINARY_CLOUD_NAME="your-cloud-name"
-CLOUDINARY_API_KEY="1234567890"
-CLOUDINARY_API_SECRET="your-api-secret"
