--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "badge": "coverage-badges"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.896.0",
     "@prisma/client": "^6.10.1",
     "bcrypt": "^6.0.0",
-    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
